<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseActivity"
    android:background="@color/background">

    <ImageView
        android:id="@+id/img_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:contentDescription="@string/todo"
        android:src="@drawable/gambar1" />


    <TextView
        android:id="@+id/txt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_1"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/choisir"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="136dp"
        android:layout_height="98dp"
        android:layout_below="@+id/txt_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:width="100dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/exam"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="136dp"
        android:layout_height="98dp"
        android:layout_below="@id/btn1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:width="100dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/td"
        android:textColor="@color/white"
        android:textSize="18sp" />





</RelativeLayout>