<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectActivity"
    android:background="@drawable/backback1">

    <ImageView
        android:id="@+id/img_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/gambar1" />



    <TextView
        android:id="@+id/txt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_1"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/bonjour_enseignant"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <ImageView
        android:id="@id/img_2"
        android:layout_width="207dp"
        android:layout_height="170dp"
        android:layout_below="@+id/txt_1"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/support" />

    <LinearLayout
        android:id="@+id/lyl_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_2"
        android:orientation="vertical"
        android:padding="30dp">

        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType=""
            android:paddingStart="18dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/pass"
            android:paddingRight="10dp"
            android:longClickable="false"
            android:drawableRight="@drawable/ic_baseline_visibility_off_24"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="18dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lyl_1"
        android:layout_centerHorizontal="true"
        android:width="300dp"
        android:background="@drawable/button_shape1"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/connecter"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_1"
        android:layout_marginStart="15dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/je_n_ai_pas_de_compte"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/inscrire"
            android:textColor="@color/teal"
            android:textSize="12sp" />


    </LinearLayout>



</RelativeLayout>