<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/backback1">

    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="506dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-18dp"
        android:layout_marginTop="-60dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/background" />

    <ImageView
        android:id="@+id/img_2"
        android:layout_width="215dp"
        android:layout_height="217dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/web" />

    <TextView
        android:id="@+id/txt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/marker_vos_pr_sence_avec_wixam"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_1"
        android:fontFamily="@font/poppinsregular"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/la_fr_quentation_des_tudiants_devrait_tre_simplifi_e_et_l_application_wixam_a_t_cr_e_il_suffit_de_scanner_la_carte_d_tudiant_pour_la_marquer_comme_pr_sente_ou_absente"
        android:textColor="@color/black"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="114dp"
        android:width="300dp"
        android:background="@drawable/button_shape1"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:text="@string/se_connecter"
        android:textColor="@color/white"
        android:textSize="18sp" />


</RelativeLayout>
