<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerfierCours"
    android:background="@color/backgroud1">

    <ImageView
        android:id="@+id/img_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/gambar1"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/img_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        android:layout_marginVertical="20dp"
 />

    <TextView
        android:id="@+id/txt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_2"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppinssemibold"
        android:gravity="center"
        android:text="@string/passer_votre_carte"
        android:textColor="#455A64"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_1"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppinsregular"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/faites_glisser_votre_carte_pour_vous_assurer_que_ce_tudiant_appartient_au_exam"
        android:textColor="#ffff"
        android:textSize="10sp"
        tools:ignore="SmallSp,TextContrastCheck" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/boite"
        android:layout_width="wrap_content"
        android:layout_height="406dp"
        android:layout_below="@id/txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="11dp"
        android:width="300dp"
        android:background="@color/white"
        android:textAlignment="center"
        android:textSize="30sp"
        tools:ignore="SpeakableTextPresentCheck" />


</RelativeLayout>